--- a/loom.config
+++ b/loom.config
@@ -4,12 +4,12 @@
   "display": {
     "width": 800,
     "height": 600,
-    "title": "MyProject",
+    "title": "PolyTest",
     "stats": true,
     "orientation": "landscape"
   },
-  "app_id": "com.yourcompany.MyProject",
-  "app_name": "MyProject",
+  "app_id": "com.axcella.PolyTest",
+  "app_name": "PolyTest",
   "app_version": "0.0.0",
   "app_version_code": "1"
 }
